# ChirpPipe

./: .gitignore  README.md  main.py  mcp_definitions.py  mcp_registry.py  mcp_server.py  mcp_tools.py  pyproject.toml  sample.kit.yml
.opencode/: mcp.json
apps/: app_iqa.py
chirps/: chirp_node.py  cli_chirp.py  utils.py
chirps/audio/: __index__.py  crop.py  normalize.py  rms_bars.py  sonogram.py
chirps/file/: sync_datetime.py
chirps/image/: crop_image.py  exiftool.py  raw_processor.py
chirps/ml/: audacity_markers_exporter.py  bioclip_gradcam.py  bioclip_inference.py  bird_net_v3.py  fcpxml_exporter.py  lar_iqa_assess.py  libre_yolo_detection.py  llm_vision_description.py  midi_markers_exporter.py  onnx_bioacoustic.py  onnx_bioacoustics.py  utils.py
chirps/ml/lar_iqa_model/: mobilenet_merged.py
chirps/occurrences/: global_occurrences.py
chirps/taxonomy/: ioc_multilanguage.py
examples/: main.py  vision_example.py
models/: README.md
