[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["chirps", "apps"]

[project]
name = "chirppipe"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "grad-cam>=1.5.5",
    "gradio>=6.20.0",
    "libreyolo>=1.3.1",
    "librosa>=0.11.0",
    "matplotlib>=3.11.0",
    "mcp>=1.28.1",
    "numpy>=2.4.6",
    "ollama>=0.6.2",
    "onnxruntime>=1.27.0",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "pybioclip>=2.1.5",
    "pyexiftool>=0.5.6",
    "rawpy>=0.27.0",
]
